fix white space problem

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   background-color: white;
   cursor: url(src/cursor.png), auto;
@@ -42,7 +51,6 @@ img {
 .navbar {
   position: fixed;
   right: 10px;
-  top: 10%;
   z-index: 50;
 }
 
